[package]
name = "cozycoin-rust"
version = "0.1.0"
authors = ["Rens Verschuren <hi@rensverschuren.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
serde = { version = "1.0.64", features = ["derive"] }
bincode = "1.3.2"
rand = "0.8.3"